<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvWishlist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_white_24dp"
        android:focusable="true" />

    <TextView
        android:id="@+id/txvWishlistTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/divider3"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/txvWishlistTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/main_wishlist_total_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/txvWishlistTotal"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintTop_toTopOf="@+id/txvWishlistTotal" />

    <View
        android:id="@+id/divider3"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvWishlistTotal">

        <RadioButton
            android:id="@+id/rbNewest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_newest_text"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbOldest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_oldest_text"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbAlpha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_alphabetical_text"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>